# aitrios-refapp-zone-detection

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
ai_model/: export_yolo11n.py  export_yolov8n.py  model.md
backend/: .env  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/app/: debugger.py  main.py
backend/app/client/: client_factory.py  client_interface.py  online_client_v1.py  online_client_v2.py
backend/app/config/: get_console_settings.py
backend/app/data_management/: device_stream.py  inference_deserialization.py  zonedetection.fbs  zonedetection_v2.fbs
backend/app/data_management/SmartCamera/: BoundingBox.py  BoundingBox2d.py  GeneralObject.py  ObjectDetectionData.py  ObjectDetectionTop.py
backend/app/data_management/SmartCameraV2/: BoundingBox.py  BoundingBox2d.py  CountData.py  GeneralObject.py  ObjectDetectionData.py  ObjectDetectionTop.py
backend/app/database/: db.py  models.py  utils.py
backend/app/routers/: client.py  configuration.py  connection.py  dependencies.py  device.py  health.py  object_detection.py  processing.py
backend/app/schemas/: common.py  configuration.py  connection.py  device.py  health.py  processing.py
backend/app/tests/: test_timestamp.py
backend/app/utils/: __init__.py  auth.py  logger.py  timestamp.py
backend/client_specs/: aitrios-console-openapi.json  aitrios-console-v2-openapi.json
docs/: UI_BE_logic.md  USAGE.md  credentials_screen.md  user_workflow.md
frontend/: README.md  (+2 more)
(+71 files in other folders)
