[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "Zone detection reference solution backend"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "fastapi==0.115.8",
    "flatbuffers==25.2.10",
    "greenlet==3.1.1",
    "h11==0.16.0",
    "httptools==0.6.4",
    "idna==3.10",
    "psycopg2-binary==2.9.10",
    "pyaml==25.1.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.38",
    "sqlmodel==0.0.22",
    "starlette==0.45.3",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.4",
    "websockets==15.0",
]

[project.optional-dependencies]
debug = ["debugpy==1.8.12"]

[tool.setuptools.packages.find]
where = ["."]
